src/test/ui/token/issue-10636-2.stderr
error: incorrect close delimiter: `}`
  --> $DIR/issue-10636-2.rs:19:1
   |
LL | pub fn trace_option(option: Option<isize>) {
   |                                            - close delimiter possibly meant for this
LL |     option.map(|some| 42;
   |               - un-closed delimiter
...
LL | }
   | ^ incorrect close delimiter

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> $DIR/issue-10636-2.rs:15:25
   |
LL |     option.map(|some| 42;
   |               -         -
   |               |         |
   |               |         expected one of `)`, `,`, `.`, `?`, or an operator here
   |               |         help: ...the missing `)` may belong here
   |               if you meant to close this...

error: expected expression, found `;`
  --> $DIR/issue-10636-2.rs:15:25
   |
LL |     option.map(|some| 42;
   |                         ^ expected expression

error: aborting due to 3 previous errors

